--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "eslint": "^9.23.0",
     "eslint-config-vuetify": "^3.0.3",
+    "firebase-tools": "^14.4.0",
     "globals": "^16.0.0",
     "sass-embedded": "^1.86.3",
     "unplugin-fonts": "^1.3.1",
